# rules_jvm_external

./: MODULE.bazel  README.md  specs.bzl
.bazelci/: examples.yml
docs/: bzlmod.md
examples/library_workspace/: BUILD  Example.java  WORKSPACE
private/: dependency_tree_parser.bzl
private/extensions/: maven.bzl
private/rules/: coursier.bzl  maven_install.bzl
tests/: bazel_run_tests.sh
tests/custom_maven_install/: library_lockfile_testing_install.json
tests/integration/: BUILD  library-neverlink.golden.unix  library-no-transitives-deps.golden.unix  library-transitive-only-deps.golden.unix
tests/integration/library_conflict/: MODULE.bazel
tests/integration/library_conflict_classifier/: MODULE.bazel
tests/integration/library_invalid_transitive/: MODULE.bazel
tests/integration/library_lockfile/: LibraryLockfileTest.java
tests/unit/: specs_test.bzl
