module(name = "library_conflict_test")

bazel_dep(name = "rules_jvm_external", version = "0.0")
local_path_override(
    module_name = "rules_jvm_external",
    path = "../../../",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "conflict_maven",
    artifacts = ["com.google.guava:guava:31.1-jre"],
)
maven.library(
    name = "conflict_maven",
    group = "com.google.guava",
    artifact = "guava",
    version = "31.1-jre",
)
use_repo(maven, "conflict_maven")
